k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-manager
  labels:
    app: user-manager
spec:
  ports:
    - port: 80
      targetPort: 3000
      name: http
  selector:
    app: user-manager
