k8s/public-api-virtual-service.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: user-manager
  # api.saryno.com/user-manager
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
      - matchers:
          - prefix: /user
        routeAction:
          single:
            upstream:
              name: default-user-manager-80
              namespace: gloo-system
        options:
          autoHostRewrite: true
